--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="AI 随手记">
-    <meta name="theme-color" content="#09090B">
+    <meta name="theme-color" content="#1C1C1E"> <!-- 🌟 修改：与底部导航栏同色，防止漏光 -->
     <title>AI 随手记</title>
     
     <!-- 🎨 动态生成高级图标脚本 -->
@@ -134,12 +134,12 @@
     <script type="module" src="https://esm.sh/run" defer></script>
 
     <style>
-        /* 🌟 核心修复：将底色从 #000000 改为 #09090B，解决 PWA 底部黑条问题 */
+        /* 🌟 核心修复：将底色改为 #1C1C1E (底部导航栏颜色)，解决 PWA 底部漏黑条问题 */
         html, body, #root {
             height: 100%;
             width: 100%;
             overflow: hidden; 
-            background-color: #09090B; /* 统一底色 */
+            background-color: #1C1C1E; /* 欺骗视觉：让底色与导航栏一致 */
         }
 
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
@@ -159,7 +159,7 @@
             position: fixed; 
             top: 0; left: 0; width: 100%; height: 100%;
             overflow: hidden; 
-            background-color: #09090B;
+            background-color: #09090B; /* 页面内部恢复原本的深岩灰背景 */
             z-index: 50;
             -webkit-overflow-scrolling: touch;
         }
@@ -170,7 +170,42 @@
     </style>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <!-- 🚀 静态预加载启动页 (Pre-loader) -->
+        <!-- 这个结构和 React 组件中的 SplashScreen 一模一样，确保打开瞬间看到内容而非黑屏 -->
+        <style>
+            .static-splash { position: fixed; inset: 0; background: #000000; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 99999; font-family: -apple-system, sans-serif; overflow: hidden; }
+            .static-icon { width: 128px; height: 128px; background: rgba(18,18,18,0.4); border-radius: 36px; display: flex; align-items: center; justify-content: center; border: 1px solid rgba(255,255,255,0.1); box-shadow: 0 25px 50px -12px rgba(0,0,0,0.5); position: relative; margin-bottom: 40px; }
+            .static-icon::before { content: ''; position: absolute; inset: 0; background: linear-gradient(to top right, rgba(255,255,255,0.1), transparent); border-radius: 36px; }
+            .static-text { color: white; font-size: 36px; font-weight: bold; letter-spacing: 2px; background: linear-gradient(to bottom, #fff, rgba(255,255,255,0.5)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 16px; }
+            .static-sub { color: #52525B; font-size: 10px; letter-spacing: 4px; text-transform: uppercase; font-weight: 500; }
+            .static-glow { position: absolute; width: 80vw; height: 80vw; border-radius: 50%; filter: blur(120px); opacity: 0.6; animation: static-pulse 4s infinite; }
+            .static-glow-1 { top: -20%; left: -20%; background: rgba(37, 99, 235, 0.2); }
+            .static-glow-2 { bottom: -20%; right: -20%; background: rgba(45, 212, 191, 0.1); }
+            @keyframes static-pulse { 0%, 100% { opacity: 0.6; } 50% { opacity: 0.4; } }
+            @keyframes static-shimmer { 0% { transform: translateX(-100%); } 100% { transform: translateX(300%); } }
+        </style>
+        <div class="static-splash">
+            <div class="static-glow static-glow-1"></div>
+            <div class="static-glow static-glow-2"></div>
+            <div class="static-icon">
+                <!-- 简化的 SVG 图标，与 Lucide Wallet 保持一致视觉 -->
+                <svg width="56" height="56" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M21 12V7H5a2 2 0 0 1 0-4h14v4" />
+                    <path d="M3 5v14a2 2 0 0 0 2 2h16v-5" />
+                    <path d="M18 12a2 2 0 0 0 0 4h4v-4Z" />
+                </svg>
+            </div>
+            <div class="static-text">AI 随手记</div>
+            <div class="static-sub">Intelligent Finance</div>
+            <div style="position: absolute; bottom: 64px; display: flex; flex-direction: column; align-items: center; gap: 16px;">
+                <div style="width: 128px; height: 2px; background: rgba(255,255,255,0.05); border-radius: 99px; overflow: hidden;">
+                    <div style="width: 50%; height: 100%; background: linear-gradient(90deg, transparent, #2DD4BF, transparent); animation: static-shimmer 1.5s infinite linear;"></div>
+                </div>
+                <div style="color: rgba(255,255,255,0.2); font-size: 9px; font-family: monospace; letter-spacing: 2px;">VERSION 1.3.0</div>
+            </div>
+        </div>
+    </div>
 
     <script type="text/babel" data-type="module">
         import React, { useState, useEffect, useMemo, useRef } from 'react';
